@@ -106,9 +106,11 @@ set log syslog
 ## ":", "?", "@". Default timeout is 5 seconds, you can customize it by
 ## adding the timeout option.
 #
-# set mmonit http://monit:monit@192.168.1.10:8080/collector
+# set mmonit
+#     http://monit:monit@192.168.1.10:8080/collector
 #     # with timeout 30 seconds              # Default timeout is 5 seconds
 #     # and register without credentials     # Don't register credentials
+#     # hostgroup "Virtual machines"         # Member of M/Monit hostgroup
 #
 #
 ## Monit by default uses the following format for alerts if the mail-format
