@@ -109,6 +109,7 @@ wws            [ \r\t;,()]+
 number         [0-9]+
 real           [0-9]+([.][0-9]+)?
 str            [^\000-\041@:{}"';(),%]+
+hostgroup      [^\000-\037"';,%]+
 address        [^\000-\041<>{}\[\]]+
 addrname       [^\000-\037@<>{}\[\]]+
 hostname       {str}(\.{str})*
@@ -155,7 +156,7 @@ atime          ("atime"|"access time"|"access timestamp")
 ctime          ("ctime"|"change time"|"change timestamp")
 mtime          ("mtime"|"modification time"|"modification timestamp"|"modify time"|"modify timestamp")
 
-%x ARGUMENT_COND DEPEND_COND SERVICE_COND URL_COND ADDRESS_COND STRING_COND EVERY_COND HTTP_HEADER_COND INCLUDE
+%x ARGUMENT_COND DEPEND_COND SERVICE_COND URL_COND ADDRESS_COND STRING_COND HOSTGROUP_COND EVERY_COND HTTP_HEADER_COND INCLUDE
 
 %%
 
@@ -575,6 +576,11 @@ group[ \t]+       {
                     return GROUP;
                   }
 
+hostgroup[ \t]+   {
+                    BEGIN(HOSTGROUP_COND);
+                    return HOSTGROUP;
+                  }
+
 "http headers"{ws} {
                         BEGIN(HTTP_HEADER_COND);
                         return '[';
@@ -922,6 +928,35 @@ group[ \t]+       {
 
 }
 
+<HOSTGROUP_COND>{
+
+  {hostgroup}     {
+                    yylval.string = Str_dup(yytext);
+                    BEGIN(INITIAL);
+                    save_arg();
+                    return HOSTGROUPNAME;
+                  }
+
+  \"{hostgroup}\" {
+                    yylval.string = handle_quoted_string(yytext);
+                    BEGIN(INITIAL);
+                    save_arg();
+                    return HOSTGROUPNAME;
+                  }
+
+  \'{hostgroup}\' {
+                    yylval.string = handle_quoted_string(yytext);
+                    BEGIN(INITIAL);
+                    save_arg();
+                    return HOSTGROUPNAME;
+                  }
+
+  [\"\']          {
+                      yyerror("unbalanced quotes");
+                  }
+
+}
+
 <EVERY_COND>{
 
   {ws}            ;
@@ -986,7 +1021,7 @@ group[ \t]+       {
 }
 
 
-<INITIAL,ARGUMENT_COND,SERVICE_COND,DEPEND_COND,URL_COND,ADDRESS_COND,STRING_COND,EVERY_COND,HTTP_HEADER_COND>. {
+<INITIAL,ARGUMENT_COND,SERVICE_COND,DEPEND_COND,URL_COND,ADDRESS_COND,STRING_COND,HOSTGROUP_COND,EVERY_COND,HTTP_HEADER_COND>. {
                       check_state = None_State;
                       return yytext[0];
                   }
